[gd_scene load_steps=4 format=3 uid="uid://dm24ld1hnvcd6"]

[ext_resource type="PackedScene" uid="uid://br2ptv3q5q127" path="res://Robot.glb" id="1_p20id"]
[ext_resource type="Script" path="res://ik_manager.gd" id="2_7lkxy"]
[ext_resource type="Script" path="res://robot.gd" id="2_nc48k"]

[node name="Robot" instance=ExtResource("1_p20id")]
script = ExtResource("2_nc48k")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/rotation = Quaternion(-0.5, -0.5, 0.5, 0.5)
bones/1/rotation = Quaternion(-0.707107, -1.13097e-09, 2.82659e-07, 0.707107)
bones/5/rotation = Quaternion(-0.707107, -1.13097e-09, 2.82659e-07, 0.707107)
bones/9/rotation = Quaternion(0.5, 0.5, 0.5, 0.5)
bones/10/rotation = Quaternion(1.85131e-08, -0.707107, 2.27983e-08, 0.707107)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-5.15644e-08, 0.707107, -5.15643e-08, 0.707107)
bones/14/rotation = Quaternion(-2.7317e-08, -0.707107, -2.30317e-08, 0.707107)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(-5.15644e-08, 0.707107, -5.15643e-08, 0.707107)
bones/16/rotation = Quaternion(-1.99449e-16, 3.03007e-09, 1.42109e-14, 1)
bones/17/rotation = Quaternion(-0.5, -0.5, 0.5, -0.5)

[node name="FL_Leg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="1" node_paths=PackedStringArray("target_obj", "raycast")]
process_priority = 1
root_bone = &"FL1"
tip_bone = &"FL4"
target = Transform3D(1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0)
target_node = NodePath("../../FL_Target")
script = ExtResource("2_7lkxy")
target_obj = NodePath("../../FL_Target")
raycast = NodePath("../../../Raycasts/FL_Raycast")

[node name="FR_Leg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="2" node_paths=PackedStringArray("target_obj", "raycast")]
process_priority = 1
root_bone = &"FR1"
tip_bone = &"FR4"
target = Transform3D(1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0)
target_node = NodePath("../../FR_Target")
script = ExtResource("2_7lkxy")
target_obj = NodePath("../../FR_Target")
raycast = NodePath("../../../Raycasts/FR_Raycast")

[node name="BL_Leg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="3" node_paths=PackedStringArray("target_obj", "raycast")]
process_priority = 1
root_bone = &"BL1"
tip_bone = &"BL4"
target = Transform3D(1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0)
target_node = NodePath("../../BL_Target")
script = ExtResource("2_7lkxy")
target_obj = NodePath("../../BL_Target")
raycast = NodePath("../../../Raycasts/BL_Raycast")

[node name="BR_Leg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="4" node_paths=PackedStringArray("target_obj", "raycast")]
process_priority = 1
root_bone = &"BR1"
tip_bone = &"BR4"
target = Transform3D(1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0)
target_node = NodePath("../../BR_Target")
script = ExtResource("2_7lkxy")
target_obj = NodePath("../../BR_Target")
raycast = NodePath("../../../Raycasts/BR_Raycast")

[node name="FL_Target" type="Marker3D" parent="Armature" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.28409, -2.49922, -1.28428)
top_level = true

[node name="FR_Target" type="Marker3D" parent="Armature" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8282, -2.72176, -1.27399)
top_level = true

[node name="BL_Target" type="Marker3D" parent="Armature" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.17614, -2.4916, 1.47109)
top_level = true

[node name="BR_Target" type="Marker3D" parent="Armature" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.78833, -2.69254, 1.10589)
top_level = true

[node name="Raycasts" type="Node3D" parent="." index="1"]

[node name="FR_Raycast" type="RayCast3D" parent="Raycasts" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69043, -0.874359, -0.812488)
target_position = Vector3(0, -5, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Raycasts/FR_Raycast" index="0"]
transform = Transform3D(0.36, 0, 0, 0, 0.36, 0, 0, 0, 0.36, 0, 0, 0)
visible = false

[node name="BR_Raycast" type="RayCast3D" parent="Raycasts" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69043, -0.874359, 1.40468)
target_position = Vector3(0, -5, 0)

[node name="CSGBox3D2" type="CSGBox3D" parent="Raycasts/BR_Raycast" index="0"]
transform = Transform3D(0.36, 0, 0, 0, 0.36, 0, 0, 0, 0.36, 0, 0, 0)
visible = false

[node name="FL_Raycast" type="RayCast3D" parent="Raycasts" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77726, -0.874359, -0.812488)
target_position = Vector3(0, -5, 0)

[node name="CSGBox3D3" type="CSGBox3D" parent="Raycasts/FL_Raycast" index="0"]
transform = Transform3D(0.36, 0, 0, 0, 0.36, 0, 0, 0, 0.36, 0, 0, 0)
visible = false

[node name="BL_Raycast" type="RayCast3D" parent="Raycasts" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77726, -0.874359, 1.40468)
target_position = Vector3(0, -5, 0)

[node name="CSGBox3D4" type="CSGBox3D" parent="Raycasts/BL_Raycast" index="0"]
transform = Transform3D(0.36, 0, 0, 0, 0.36, 0, 0, 0, 0.36, 0, 0, 0)
visible = false
